--- a/public/css/user_account.css
+++ b/public/css/user_account.css
@@ -1,6 +1,8 @@
     body{
 
-      background-color: rgb(224, 223, 223);
+      margin: 0;
+      padding: 0;
+      background-color: whitesmoke;
       font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
     }
@@ -48,6 +50,9 @@
       border: 1.5px solid fuchsia;
       color: fuchsia;
       background-color: white;
+    }
+    span.back-arrow{
+      display: none;
     }
     /*Common styles */
     .msg-icon{
@@ -503,26 +508,23 @@
     /*Styles for request email change file */
 
     .request-change-container{
-      width: 80%;
+      width: 90%;
+      margin: 2% auto;
       border: none;
       color: rgb(0, 6, 0);
       height: 70%;
       text-align: center;
-      margin-left: 10%;
-      margin-right: 10%;
-      margin-top: 2%;
-      margin-bottom: 8%;
+      
       font-size: 16px;
-      padding: 5px;
+      padding: 1em;
       border-radius: 2px;
       background: white;
     }
-    .request-change-container h2{
+    .heading-three{
       color: green;
       text-align: center;
     }
 
-    
     
     .request-change-container input[type = 'radio']{
       flex-direction: row;
@@ -567,7 +569,47 @@
       margin-right: 25%;
       color: rgb(246, 236, 236);
       background: rgb(247, 143, 247);
+      transition: 0.7s ease;
     }
+
+    @media (max-width: 600px) {
+      span.login-btn{
+        width: 15%;
+        float: right;
+        font-size: 1em;
+        text-align: center;
+        color: aliceblue;
+        border: none;
+        padding: 0.5em;
+        transform: translateY(-80%);
+        border-radius: 8px;
+        background-color: orangered;
+      }
+      .request-change-container{
+        max-width: 80%;
+        margin: 2% auto;
+        line-height: 2em;
+      }
+
+      span.back-arrow{
+        display: block;
+        height: 15px;
+        width: 15px;
+        padding: 5px;
+        border-radius: 100px;
+        font-size: 1em;
+        margin-top: 4% ;
+        margin-left: 2%;
+        background: rgb(221, 218, 218);
+        
+      }
+      .heading-three{
+        font-size: 1.5em;
+        line-height: 1em;
+      }
+
+    }
+
 
     /*Styles for dynamic email content
 
