--- a/public/css/account.css
+++ b/public/css/account.css
@@ -3,7 +3,6 @@
       padding: 0;
       background-color: rgba(219, 219, 219, 0.3);
       font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
     }
     header{
       height: auto;
@@ -13,9 +12,11 @@
       top: 0;
       z-index: 1000;
       background: linear-gradient(to right, rgb(150, 237, 150) 40%, rgb(252, 163, 252)  );
-
     }
         
+    .back-arrow{
+      display: none;
+    }
     .heading-two{
       font-size: 4rem;
       
@@ -28,6 +29,16 @@
       margin-left: 2%;
     }
     
+    header div.page-title{
+      color: black;
+      font-size: 1.5em;
+      width: 10%;
+      padding: 2px;
+      margin: 0% auto;
+      text-align: center;
+      background-color: transparent;
+    }
+
     div.left-nav{
       display: flex;
       margin-left: 5%;
@@ -51,10 +62,13 @@
       border-right: 1px solid rgb(152, 150, 150, 0.5);
     }
 
+    .page-title{
+      display: none;
+    }
 
     div.right-nav{
       display: flex;
-      margin-left: 50%;
+      margin-left: 70%;
     }
     
     
@@ -189,6 +203,7 @@
       max-width: 100%;
       margin: auto;
       padding: 0 5px;
+      display: flex;
       background-color: transparent;
     }
     div.cards{
@@ -209,7 +224,7 @@
     }
     div.cards p{
       padding-bottom: 8px;
-      color: #4dff03;
+      color: rgb(129, 225, 129);
     }
 
 
@@ -244,7 +259,8 @@
       margin: 2% auto;
       max-height: auto;    
       border-top-left-radius: 10px;
-      border-top-right-radius: 10px;  
+      border-top-right-radius: 10px; 
+      box-shadow: 0 5px 10px rgb(0, 0, 0, 0, 0.5); 
     
     }
     .accordion dd {
@@ -319,7 +335,8 @@
       background-color: white;
       max-width: 94%;
       margin: 1% auto;      
-      padding: 10px;
+      padding: 1em 2em;
+
       display: grid;
       position: relative;
       grid-template-columns: repeat(5, 1fr);
@@ -375,9 +392,7 @@
     }
     
     
-    .quick-access{
-      display: flex;
-    }
+    
 
     /*Stylings for contact modal*/
     .contact-modal-overlay{
@@ -394,10 +409,10 @@
     .contact-modal{
       width: 50%;
       height: 50%;
-      margin: 50% auto;
+      top: 25% ;
       border-radius: 2px;
-      padding: 8px;
-      left: 50%;
+      padding: 1em 2em;
+      left: 25%;
       position: fixed;
       box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
       transform: translate(-50%, -50%);
@@ -407,21 +422,21 @@
     }
     
     .slow-contact-modal{
-      animation: slideDown 0.8s ease-out;
+      animation: moveFromTop 0.8s ease-out;
       animation-fill-mode: forwards;
-      top: 25%;
-      margin-right: 50%;
+      transform: translateX(-50%);
+
 
     }
-    @keyframes slideDown{
+    @keyframes moveFromTop{
       from{
         opacity: 0;
-        transform: translateY(-100%);
+        transform: translateX(-50%);
+
       }
       to{
         opacity: 1;
         transform: translateY(0);
-        transform: translateX(-50%);
 
       }
     }
@@ -430,14 +445,11 @@
       padding-right: 10px;
     }
     .modal-heading{
-      font-size: 20px;
+      font-size: 1.5em;
       font-weight: bold;
-      width: 40%;
-      margin-left: 30%;
-      margin-right: 30%;
       text-align: center;
       padding: 2px;
-      background-color: transparent;
+      color: #fe055c;
     }
     .modal-content{
       width: 98%;
@@ -449,11 +461,19 @@
       padding: 5px;
       border-bottom: 2px solid skyblue;
     }
+    .modal-content i{
+      font-size: 1em;
+    }
     .modal-content span{
       padding-left: 1%;
-      font-style: oblique;
-      font-weight: bold;
+      font-style: inherit;
     }
+    .modal-content span:hover{
+      color: orangered;
+      transition: 0.5s ease;
+      cursor: pointer;
+    }
+
     div#whatsapp{
       display: flex;
     }
@@ -469,13 +489,13 @@
       color: orangered;
     }
 
-    .close-modal{
+    .close-contact-modal{
       float: right;
-      font-size: 25px;
       color: black;
       cursor: pointer;
+      transform: translateY(-90%);
     }
-    .close-modal:hover{
+    .close-contact-modal:hover{
       color: orangered;
     }
 
@@ -488,6 +508,10 @@
       height: 100%;
       background: rgba(255, 255, 255, 0.2); /* Semi-transparent white */
       z-index: 2;
+    }
+    header span a{
+      float: right;
+      text-decoration: none;
     }
     .payments-container{
       background-color: white;
@@ -535,16 +559,23 @@
     }
     div.add-mode-container:hover{
       transform: translateX(7px);
-      transition: 0.7s ease;
+      transition: 0.5s ease;
+    }
+
+    .mode-title{
+      font-size: 1.2em;
+      margin-left: 2.5%;
+
     }
 
     div.mode-number{
       margin-top: 20%;
+
       margin-bottom: 20%;
       margin-left: 25%;
       margin-right: 25%;
       font-size: 20px;
-      font-style: oblique;
+      font-style: inherit;
       font-weight: bolder;
     }
     div.add-mode{
@@ -555,6 +586,17 @@
       font-size: 20px;
       font-weight: bolder;
     }
+    div.add-mode:hover, 
+    .add-mode-text:hover{
+      color: #fe055c;
+      transition: 0.5s ease;
+
+    }
+
+    span.add-mode-text{
+      padding-left: 10px;
+    }
+
     .add-mpesa-overlay{
       top: 0;
       left: 0;
@@ -582,7 +624,7 @@
       top: 25%;
       margin-right: 25%;
       border-radius: 2px;
-      padding: 8px;
+      padding: 1em 1em;
       padding: 1%;
       position: fixed;
       box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
@@ -592,18 +634,19 @@
     }
     
     .payments-slow-modals{
-      animation: slideDown 0.8s ease-out;
+      animation: moveFromTop 0.8s ease-out;
       animation-fill-mode: forwards;
       top: 25%;
+      left: 25%;
     }
-    @keyframes slideDown{
+    @keyframes moveFromTop{
       from{
         opacity: 0;
         transform: translateY(-100%);
       }
       to{
         opacity: 1;
-        transform: translateX(50%);
+        transform: translateY(0);
 
       }
     }
@@ -614,6 +657,7 @@
       color: black;
       margin-right: 1%;
       cursor: pointer;
+      transform: translateY(-100%);
     }
     .close-modal:hover{
       color: orangered;
@@ -647,16 +691,15 @@
     }
 
     .modal button{
-      width: 40%;
+      width: 50%;
       height: 40px;
       border-radius: 45px;
       border: none;
       outline: none;
       cursor: pointer;
-      margin-top: 5%;
-      margin-left: 30%;
-      margin-right: 30%;
-      margin-bottom: 2%;
+      margin: 4% auto;
+      margin-left: 25%;
+      margin-right: 25%;
       color: whitesmoke;
       font-size: 18px;
       background-color: rgb(252, 7, 252, 0.7);
@@ -664,6 +707,7 @@
     }
     .modal button:hover{
       background-color: orangered;
+      transition: 0.5s ease;
     }
 
     /*Special stylings for add card modal*/
@@ -776,13 +820,30 @@
       }
       
       header{
-        flex: 1;
+        width: 100%;
+        height: 70px;
         padding-right: 15px;
         background: rgb(255, 255, 255, 0.5);
         border-bottom: 1px solid rgb(205, 201, 201);
 
       }
-      span#back-arrow{
+      header a{
+        display: none;
+      }
+      header div.page-title{
+        color: rgb(44, 43, 43);
+        display: block;
+        font-size: 18px;
+        width: 30%;
+        height: 30px;
+        padding: 2px;
+        margin-right: 35%;
+        margin-left: 35%;
+        margin-top: 10%;
+        text-align: center;
+        background-color: transparent;
+      }
+      span.back-arrow{
         display: block;
         height: 15px;
         width: 15px;
@@ -902,15 +963,20 @@
       .accordion div.container{
         max-width: 90%;
         margin: 2% auto;
-        max-height: auto;    
+        max-height: auto;  
+        padding: 1em 2em;
+  
         border-top-left-radius: 5px;
         border-top-right-radius: 5px; 
+        box-shadow: 0 5px 10px rgb(0, 0, 0, 0, 0.4);
       }
       
       .accordion dd {
-        font-size: 1.5em;
+        font-size: 1em;
         line-height: 1.5em;
         display: flex;
+        width: 100%;
+        margin: auto;
       }
       
       .accordion div {
@@ -922,11 +988,11 @@
         text-align: center;
         font-weight: 400;
         transition: background-color 0.5s ease-in-out;
-        max-width: 94%;
+        min-width: 94%;
         font-size: 14px;
         max-height: auto;
         margin: 5% auto;
-        padding: 8px; 
+        padding: 1em 2em;
         height: auto; 
         border-top-left-radius: 5px;
         border-top-right-radius: 5px;        
@@ -1005,6 +1071,7 @@
       }
       
 
+      
     
       div.container-sub-tabs{
         display: flex;
@@ -1014,8 +1081,9 @@
       }
       div.sub-tabs{
         width: 25%;
+        height: 20px;
         font-size: 12px;
-        padding: 5px;
+        padding-top: 0;
         
       }
        
@@ -1025,7 +1093,7 @@
         background-color: white;
         max-width: 100%;
         margin: 1% auto;      
-        padding: 5px;
+        padding: 1em 2em 1em 2em;
         display: grid;
         grid-template-columns: repeat(auto-fit, 1fr);
         gap: 10px;
@@ -1048,6 +1116,137 @@
         flex: 1;
 
       }
+      .contact-modal{
+        width: 70%;
+        height: 70%;
+        top: 10%;
+        left: 5%;
+        right: 10%;
+        
+  
+      }
+
+      .modal-content{
+        width: 100%;
+        height: 25%;
+        margin: 2% auto;
+        font-size: 14px;
+        border-bottom: 1.5px solid skyblue;
+      }
+      .modal-content i{
+        font-size: 14px;
+      }
+
+      .modal-content span{
+        padding-left: 1%;
+        font-style: inherit;
+      }
+      div#whatsapp{
+        display: flex;
+      }
+      img{
+      margin-left: 0%;
+      height: 50px;
+      width: 50px;
+      }
+      .whatsapp-link{
+        display: flex;
+        cursor: pointer;
+        transform: translateY(20%);
+      }
+        
+      .close-contact-modal{
+        float: right;
+        margin-left: 10%;
+        color: rgb(71, 67, 67);
+        cursor: pointer;
+        transform: translateY(-70%);
+      }
+      
+      .close-contact-modal i{
+        font-size: 5px;
+        margin-left: 70%;
+      }
+
+  
+      
+
+      /*Payments responsiveness*/
+      div#container-title{
+        display: none;
+      }
+
+      .mode-title{
+        font-size: 1em;
+        margin-left: 2.5%;
+  
+      }
+  
+      div.mode-number{        
+        font-size: 14px;
+        
+      }
+      div.add-mode{
+        margin-top: 20%;
+        margin-bottom: 20%;
+        margin-left: 5%;
+        margin-right: 5%;
+        font-size: 20px;
+        font-weight: 500;
+      }      
+  
+      span.add-mode-text{
+        padding-left: 10px;
+        font-size: 14px;
+
+      } 
+
+      .modal-heading{
+        font-size: 1em;
+        
+      }
+      .modal{
+        min-width: 80%;
+        height: 80%;
+        top: 10%;
+        left: 10%;
+        right: 10%;
+        
+      }      
+        
+      .close-modal{
+        
+        font-size: 20px;
+        margin-right: 1%;
+        transform: translateY(-100%);
+      }
+      .close-modal:hover{
+        color: orangered;
+      }
+      .modal input{
+        display: block;
+        padding-left: 10px;
+        width: 90%;
+        margin: 10% auto;
+        height: 40px;
+        
+      }          
+  
+      .modal button{
+        width: 70%;
+        height: 30px;        
+        margin-top: 8%;
+        margin-left: 15%;
+        margin-right: 15%;        
+        background-color: rgb(252, 7, 252, 0.8);
+  
+      }
+        
+      /*Special stylings for add card modal*/
+      div.align-modal-inputs{
+        display: flex;
+      }
+  
     }
     
    
