--- a/public/css/answers.css
+++ b/public/css/answers.css
@@ -7,14 +7,32 @@ body{
 
 header{
   height: 70px;
-  background: linear-gradient(to left bottom, rgb(252, 163, 252), rgb(200, 200, 253) 85%, #cacafc);
+  position: sticky;
+  top: 0;
+  padding-right: 15px;
+  background: rgb(255, 255, 255, 0.5);
+  border-bottom: 1px solid rgb(205, 201, 201);
 
 }
+header span.back-arrow{
+  display: block;
+  height: 15px;
+  cursor: pointer;
+  width: 15px;
+  padding: 5px;
+  border-radius: 100px;
+  font-size: 1em;
+  margin-left: 2%;
+  transform: translateY(70%);
+  background: rgb(221, 218, 218);
+  
+}
 .header-text{
-  padding-left: 30%;
+  padding-left: 45%;
   text-align: center;
   font-size: 16px;
   font-weight: bolder;
+  background-color: transparent;
 }
 header i{
   background-color: transparent;
@@ -83,6 +101,7 @@ ol li{
   margin-right: 6%;
   margin-bottom: 1.5%;
   height: fit-content;
+  box-shadow: 0 5px 10px rgb(0, 0, 0, 0.3);
 
 }
 
