--- a/public/css/user_account.css
+++ b/public/css/user_account.css
@@ -132,13 +132,15 @@
       margin-right: 10%;
     }
     .container{
-      width: 90%;
+      width: 50%;
       border: none;
       color: rgb(0, 6, 0);
       text-align: center;
-      margin: 1% auto;
+      margin: 2% auto;
       font-size: 16px;
       padding: 5px;
+      position: relative;
+
       border-radius: 2px;
       box-shadow: 0 5px 10px rgb(0, 0, 0, 0.3);
       background: white;
@@ -198,8 +200,8 @@
       right: 40px;
       font-size: 16px;
       margin-top: 2%;
-      margin-right: 10%;
-      transform: translateX(-500%);
+      margin-right: 8%;
+      transform: translateX(-50%);
       
     }
     .container button.continue{
@@ -272,24 +274,24 @@
       background-color: whitesmoke;
     }
     .signup-container {
-      width: 80%;
+      width: 60%;
       border: none;
       color: rgb(0, 6, 0);
       height: 70%;
       text-align: center;
-      margin-left: 10%;
-      margin-right: 10%;
-      margin-top: 2%;
-      margin-bottom: 8%;
+      margin: 2% auto;
       font-size: 16px;
+      position: relative;
       padding: 5px;
       border-radius: 2px;
       background: white;
+      box-shadow: 0 5px 10px rgb(0, 0, 0, 0.3);
     }
     .signup-container h2{
       color: rgba(16, 150, 16, 0.9);
       text-align: center;
     }
+    
     .signup-container div input{
       width: 40%;
       margin-left: 8.6%;
@@ -328,6 +330,7 @@
       width: 80%;
       height: 50px;
       outline:none;
+
       text-align: left;
       border: 1px solid;
       background-color: white;
@@ -338,12 +341,14 @@
     }
     .signup-container div.inputs-block-two input[type = 'password']{
       margin-left: 12%;
+
     }
 
 
           
     .signup-container div input:hover{
-      border: 1.5px solid rgb(125, 253, 180);
+      border: 1.3px solid #fe055c;;
+      transition: 0.5s ease;
     }
 
     .signup-container div input:focus{
@@ -360,8 +365,8 @@
       right: 40px;
       font-size: 16px;
       margin-top: 2%;
-      margin-right: 15%;
-      transform: translateY(-50%);
+      margin-right: 5%;
+      transform: translateY(10%);
       
     }
 
@@ -416,29 +421,23 @@
     }
 
 
-
-
-
-
     /*Stylings for request reset file */
     
     
 
     /*Stylings for verify code file */
     .verification-container {
-      width: 70%;
+      width: 60%;
       border: none;
       color: rgb(0, 6, 0);
       height: 70%;
       text-align: center;
-      margin-left: 15%;
-      margin-right: 15%;
-      margin-top: 2%;
-      margin-bottom: 8%;
+      margin: 2% auto;
       font-size: 16px;
       padding: 5px;
       border-radius: 2px;
       background: white;
+      box-shadow: 0 5px 10px rgb(0, 0, 0, 0.3);
     }
     .verification-container h2{
       color: rgba(16, 150, 16, 0.9);
@@ -494,32 +493,25 @@
       font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     }
     
-    
-    
-   
-    
-
-
-
-
 
     /*Styles for request email change file */
 
     .request-change-container{
-      width: 90%;
+      width: 60%;
       margin: 2% auto;
       border: none;
       color: rgb(0, 6, 0);
       height: 70%;
-      text-align: center;
-      
+      text-align: center;      
       font-size: 16px;
       padding: 1em;
       border-radius: 2px;
       background: white;
+      box-shadow: 0 5px 10px rgb(0, 0, 0, 0.3);
     }
     .heading-three{
       color: green;
+      font-size: 1.5em;
       text-align: center;
     }
 
@@ -570,6 +562,7 @@
       transition: 0.7s ease;
     }
 
+
     @media (max-width: 600px) {
       span.login-btn{
         width: 15%;
@@ -606,37 +599,217 @@
         line-height: 1em;
       }
 
+
+      /*General responsive*/
+      .container{
+        width: 90%;
+        margin: 2% auto;
+        border-radius: 2px;
+        box-shadow: 0 5px 10px rgb(0, 0, 0, 0.3);
+        position:relative;       
+      }
+  
+      .container h2{
+        font-size: 1em;
+      }
+  
+      .container label{
+        display: none;
+      }
+      .container input{
+        width: 96%;
+        margin: auto;
+        padding-left: 8px;
+        border: 1px solid rgb(172, 164, 164);
+        
+      }
+      .container input[type = 'radio']{
+        width: 30%;
+        margin-left: 30%;
+        height: 30px;
+      }
+      .container input[type = 'radio']:last-child{
+        margin-left: 60%;
+      }
+    
+            
+      .container i {
+        position: absolute;
+        right: 40px;
+        font-size: 16px;
+        margin-top: 2%;
+        margin-right: 2%;
+        transform: translateY(-70%);
+        transform: translateX(70%);
+        
+      }
+      .container button.continue{
+        width: 50%;
+        height: 35px;
+        font-size: 18px;
+        border-radius: 10px;
+        border: none;
+        margin-left: 25%;
+        margin-right: 25%;
+        color: rgb(246, 236, 236);
+        background: rgb(247, 143, 247);
+      }
+      .container button.change-btn{
+        width: 50%;
+        height: 40px;
+        font-size: 18px;
+        border-radius: 10px;
+        border: none;
+        color: rgb(242, 242, 192);
+        margin-left: 25%;
+        margin-right: 25%;
+        /*background: fuchsia;*/
+      }
+      button[type = 'submit']{
+        width: 50%;
+        height: 40px;
+        font-size: 22px;
+        border-radius: 8px;
+        border: none;
+        margin-left: 25%;
+        margin-right: 25%;
+        background-color: rgb(212, 207, 207);
+        cursor: not-allowed;
+        color: white;
+  
+      }
+      
+      button[type = 'submit'].active{
+        background-color: fuchsia;
+        color: white;
+        cursor: pointer;
+        transform: 0.7s ease;
+      }
+      button[type = 'submit'].faded{
+        background-color: rgb(192, 186, 186);
+        cursor: not-allowed;
+        color: white;
+      }
+      button[type = 'submit'].delete-btn{
+        width: 50%;
+        height: 40px;
+        border-radius: 10px;
+        border: none;
+        margin-left: 25%;
+        font-size: 18px;
+        cursor: pointer;
+        margin-right: 25%;
+        color: white;
+        background: rgb(223, 73, 73);
+      }
+  
+      
+      
+
+
+
+
+
+
+      /*Signup responsive*/
+      .signup-container {
+        width: 90%;
+        border: none;
+        height: 70%;
+        text-align: center;
+        margin: 2% auto;
+        font-size: 14px;
+        position: relative;
+
+        
+      }
+      .signup-container h2{
+        font-size: 1.5em;
+      }
+      .signup-container form{
+        display: grid;
+        gap: 20px;
+      }
+      .signup-container div input{
+        width: 40%;
+        margin-left: 8.6%;
+      }
+      .signup-container div.inputs-block-one{
+        width: 100%;
+        margin: auto;
+      }
+      .signup-container div.inputs-block-one input{
+        width: 90%;
+        height: 50px;
+        margin: auto;        
+        border: 1px solid rgb(172, 164, 164);        
+        padding-left:8px;  
+  
+      }
+  
+      .signup-container div.inputs-block-two{
+        width: 90%;
+        display: block;
+        margin-left: 3%;
+        background: transparent;
+      }
+      .signup-container div.inputs-block-two input{
+        width: 100%;
+        margin: auto;
+        height: 50px;        
+        border: 1px solid rgb(172, 164, 164);
+        padding-left: 8px;
+      }
+            
+      .signup-container div input:hover{
+        border: 1.3px solid #fe055c;;
+        transition: 0.5s ease;
+      }
+  
+      .signup-container div input:focus{
+        border: 1.3px solid #ef04fc;
+        outline: none;
+      }
+      .signup-container div input::placeholder{
+        color: rgb(146, 136, 136);
+        font-size: 18px;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+      }
+      .signup-container i {
+        position: absolute;
+        right: 40px;
+        font-size: 16px;
+        margin-top: 2%;
+        margin-right: 0%;
+        transform: translateY(-250%);
+        
+      }
+  
+      /*Verification page responsive*/
+      .verification-container {
+        width: 100%;
+        margin: 5% auto;
+        height: 70%;
+        
+      }
+      .verification-container h2{
+        
+        font-size: 1em;
+      }
+      
+      .verification-container input.code-box{
+        width: 30px;
+        height: 40px;
+        
+      }
+      
+      
+  
     }
 
 
     /*Styles for dynamic email content
 
-    /*Responsive design for devices with max width of 600px*/
-    @media (max-width: 768px) {
-      .btn{
-        width: 88%;
-        height: 40px;
-        margin-left: 6%;
-        margin-right: 6%;
-  
-      }
-    }
+    
 
-    @media (max-width: 600px) {
-      .container{
-        float: left;
-        margin-left: 3%;
-        margin-right: 3%;
-        width: 94%;
-        margin-top:50px;
-        justify-content: space-between;
-        height: fit-content;
-      }
-      .btn{
-        width: 90%;
-        height: 40px;
-        margin-left: 5%;
-        margin-right: 5%;
-  
-      }
-    }
+    
