--- a/public/css/index.css
+++ b/public/css/index.css
@@ -785,8 +785,16 @@
       
 
 
-      
-      
+      :root{
+        -moz-column-rule: black;
+      }
+      .small-nav-bar{
+        width: 400px;
+        height: 70px;
+        background-color: white;
+        border-radius: 10px;
+        color: black;
+      }
       
 
 
